implementation of world module